# refsu

./: CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: banchobot_parser.rs  commands.rs  irc_handler.rs  lib.rs  main.rs  migrations.rs  types.rs
src/components/: ConnectOsuBtn.vue
src/components/Drawer/: SelectMap.vue
src/components/Drawer/Players/: PlayerSlot.vue  Players.vue  usePlayerDrag.ts
src/components/Drawer/Rooms/: RoomItem.vue  Rooms.vue
src/components/Mappool/: BeatmapPanel.vue  ImportSheetModal.vue
src/components/Mappool/Beatmap/: Item.vue  List.vue
src/components/UI/: BottomSheet.vue  Drawer.vue  Modal.vue  SlideOver.vue  TitleBar.vue  icons.ts
src/components/chat/: ChatHeader.vue  ChatMessages.vue  Message.vue  PickPrediction.vue  QuickActionBar.vue
src/components/modals/: BatteryOptimizationModal.vue  CreateLobbyModal.vue  LobbySettingsModal.vue  NowPlayingModal.vue  PlayerModal.vue  SettingsModal.vue
src/composables/: useIrcRooms.ts  useMatchCountdown.ts  useOsNotifications.ts  usePickPrediction.ts  useSoundNotifications.ts  useUserAvatar.ts
src/pages/: ChatView.vue  MappoolDetail.vue  SettingsAppearance.vue  SettingsNotifications.vue  SettingsProfile.vue  SettingsView.vue
src/services/: database.ts  sheetImport.ts  sound.ts
src/stores/: mapBans.ts  mentionKeywords.ts  settings.ts
src/types/: chat.ts  lobby.ts
src/utils/: nowPlaying.ts  rateLimiter.ts
