[package]
name = "refsu"
version = "1.0.0"
description = "Bancho IRC client for osu! referees"
authors = ["V1laZ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "refsu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
irc = { version = "1.1.0", default-features = false, features = ["ctcp", "tls-rust"] }
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"
futures = "0.3.32"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
regex = "1.12.3"
tauri-plugin-deep-link = "2.4.9"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls", "http2", "charset"] }
tauri-plugin-http = "2.5.9"
base64 = "0.22.1"
tauri-plugin-os = "2.3.2"
tauri-plugin-notification = "2.3.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "android")'.dependencies]
rustls-platform-verifier = "0.7"
jni = "0.22"
tauri-plugin-android-battery-optimization = "0.1.4"

